--- a/src/MEGASync/gui/Resources_dark.qrc
+++ b/src/MEGASync/gui/Resources_dark.qrc
@@ -168,11 +168,9 @@
         <file alias="file-search-02.svg">images/themed/dark/file-search-02.svg</file>
         <file alias="file-question-02.svg">images/themed/dark/file-question-02.svg</file>
         <file alias="link-01.svg">images/themed/dark/link-01.svg</file>
-        <file alias="mega-outline.svg">images/themed/dark/mega-outline.svg</file>
-        <file alias="folder-open.svg">images/themed/dark/folder-open.svg</file>
-        <file alias="link-01-primary.svg">images/themed/dark/link-01-primary.svg</file>
         <file alias="chevron-right-icon-secondary.svg">images/themed/dark/chevron-right-icon-secondary.svg</file>
         <file alias="folder.svg">images/themed/dark/folder.svg</file>
+        <file alias="monitor.svg">images/themed/dark/monitor.svg</file>
         <file alias="alert-circle-support-warning.svg">images/themed/dark/alert-circle-support-warning.svg</file>
         <file alias="atom.svg">images/themed/dark/atom.svg</file>
         <file alias="radial-speedometer.svg">images/themed/dark/radial-speedometer.svg</file>
@@ -201,14 +199,5 @@
         <file alias="play_small_thin_outline_button_outline_hover">images/themed/dark/play_small_thin_outline_button_outline_hover.svg</file>
         <file alias="info_small_thin_outline_text_info">images/themed/dark/info_small_thin_outline_text_info.svg</file>
         <file alias="x_circle_small_thin_outline_text_error">images/themed/dark/x_circle_small_thin_outline_text_error.svg</file>
-        <file alias="move-down_small_thin_outline_icon_primary">images/themed/dark/move-down_small_thin_outline_icon_primary.svg</file>
-        <file alias="move-up_small_thin_outline_icon_primary">images/themed/dark/move-up_small_thin_outline_icon_primary.svg</file>
-        <file alias="move-top_small_thin_outline_icon_primary">images/themed/dark/move-top_small_thin_outline_icon_primary.svg</file>
-        <file alias="external-link_small_thin_outline_icon_primary">images/themed/dark/external-link_small_thin_outline_icon_primary.svg</file>
-        <file alias="move-bottom_small_thin_outline_icon_primary">images/themed/dark/move-bottom_small_thin_outline_icon_primary.svg</file>
-        <file alias="play_small_thin_outline_icon_primary">images/themed/dark/play_small_thin_outline_icon_primary.svg</file>
-        <file alias="pause_small_thin_outline_icon_primary">images/themed/dark/pause_small_thin_outline_icon_primary.svg</file>
-        <file alias="x_small_thin_outline_icon_primary">images/themed/dark/x_small_thin_outline_icon_primary.svg</file>
-        <file alias="eraser_small_thin_outline_icon_primary">images/themed/dark/eraser_small_thin_outline_icon_primary.svg</file>
     </qresource>
 </RCC>
