--- a/src/MEGASync/node_selector/gui/ui/NodeSelectorTreeViewWidget.ui
+++ b/src/MEGASync/node_selector/gui/ui/NodeSelectorTreeViewWidget.ui
@@ -134,14 +134,14 @@ background-color: transparent;
               </property>
               <property name="minimumSize">
                <size>
-                <width>0</width>
-                <height>0</height>
+                <width>24</width>
+                <height>24</height>
                </size>
               </property>
               <property name="maximumSize">
                <size>
-                <width>16777215</width>
-                <height>16777215</height>
+                <width>24</width>
+                <height>24</height>
                </size>
               </property>
               <property name="cursor">
@@ -154,11 +154,14 @@ background-color: transparent;
                <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/chevron-left_medium_thin_outline</normaloff>:/chevron-left_medium_thin_outline</iconset>
               </property>
+              <property name="iconSize">
+               <size>
+                <width>24</width>
+                <height>24</height>
+               </size>
+              </property>
               <property name="type" stdset="0">
                <string notr="true">ghost</string>
-              </property>
-              <property name="dimension" stdset="0">
-               <string notr="true">medium</string>
               </property>
              </widget>
             </item>
@@ -170,10 +173,16 @@ background-color: transparent;
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
+              <property name="minimumSize">
+               <size>
+                <width>24</width>
+                <height>24</height>
+               </size>
+              </property>
               <property name="maximumSize">
                <size>
-                <width>16777215</width>
-                <height>16777215</height>
+                <width>24</width>
+                <height>24</height>
                </size>
               </property>
               <property name="cursor">
@@ -186,11 +195,14 @@ background-color: transparent;
                <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/chevron-right_medium_thin_outline</normaloff>:/chevron-right_medium_thin_outline</iconset>
               </property>
+              <property name="iconSize">
+               <size>
+                <width>24</width>
+                <height>24</height>
+               </size>
+              </property>
               <property name="type" stdset="0">
                <string notr="true">ghost</string>
-              </property>
-              <property name="dimension" stdset="0">
-               <string notr="true">medium</string>
               </property>
              </widget>
             </item>
@@ -1082,14 +1094,14 @@ background-color: transparent;
  </widget>
  <customwidgets>
   <customwidget>
-   <class>IconLabel</class>
-   <extends>QToolButton</extends>
-   <header>tokenizer/TokenizableItems/IconLabel.h</header>
-  </customwidget>
-  <customwidget>
    <class>TokenizableButton</class>
    <extends>QPushButton</extends>
    <header>tokenizer/TokenizableItems/TokenizableButtons.h</header>
+  </customwidget>
+  <customwidget>
+   <class>TokenizableToolButton</class>
+   <extends>QToolButton</extends>
+   <header>tokenizer/TokenizableItems/TokenizableButtons.h </header>
   </customwidget>
   <customwidget>
    <class>TabSelector</class>
@@ -1098,9 +1110,9 @@ background-color: transparent;
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>TokenizableToolButton</class>
+   <class>IconLabel</class>
    <extends>QToolButton</extends>
-   <header>tokenizer/TokenizableItems/TokenizableButtons.h </header>
+   <header>tokenizer/TokenizableItems/IconLabel.h</header>
   </customwidget>
   <customwidget>
    <class>NodeSelectorTreeView</class>
