--- a/src/MEGASync/node_selector/gui/ui/NodeSelectorTreeViewWidget.ui
+++ b/src/MEGASync/node_selector/gui/ui/NodeSelectorTreeViewWidget.ui
@@ -210,7 +210,13 @@ background-color: transparent;
           </widget>
          </item>
          <item>
-          <widget class="QLabel" name="lFolderName">
+          <widget class="ElidingLabel" name="lFolderName">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="minimumSize">
             <size>
              <width>0</width>
@@ -315,15 +321,9 @@ background-color: transparent;
                 </widget>
                </item>
                <item>
-                <widget class="QLabel" name="sh_folderName">
+                <widget class="ElidingLabel" name="sh_folderName">
                  <property name="text">
                   <string notr="true"/>
-                 </property>
-                 <property name="font-size" stdset="0">
-                  <string notr="true">body-1</string>
-                 </property>
-                 <property name="semibold" stdset="0">
-                  <bool>true</bool>
                  </property>
                 </widget>
                </item>
@@ -528,12 +528,18 @@ background-color: transparent;
          </item>
          <item>
           <widget class="QWidget" name="customButtonsContainer" native="true">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <layout class="QHBoxLayout" name="customButtonsLayout">
             <property name="spacing">
              <number>24</number>
             </property>
             <property name="leftMargin">
-             <number>0</number>
+             <number>10</number>
             </property>
             <property name="topMargin">
              <number>0</number>
@@ -1118,6 +1124,11 @@ background-color: transparent;
    <class>NodeSelectorTreeView</class>
    <extends>QTreeView</extends>
    <header>node_selector/gui/NodeSelectorTreeView.h</header>
+  </customwidget>
+  <customwidget>
+   <class>ElidingLabel</class>
+   <extends>QLabel</extends>
+   <header>gui/ElidedLabel.h</header>
   </customwidget>
  </customwidgets>
  <resources>
