SNC-5918: Added 2FA logic and error management.

--- a/src/MEGASync/gui/qml/qml.qrc
+++ b/src/MEGASync/gui/qml/qml.qrc
@@ -219,7 +219,9 @@
         <file>quick_widget/qmldir</file>
         <file>change_password/ChangePassword.qml</file>
         <file>change_password/ChangePasswordPage.qml</file>
+        <file>change_password/TwoFAPage.qml</file>
         <file>change_password/ChangePasswordStrings.qml</file>
         <file>change_password/qmldir</file>
     </qresource>
 </RCC>
+
